# corduroy

./: .gitignore  Cargo.toml  README.md  pyproject.toml
notebooks/: macks_creek_simulation.ipynb  test_bindings.ipynb
src/: data.rs  domain.rs  lib.rs  main.rs  plot.rs  python.rs  regrid.rs
src/hydro/: channel.rs  grid.rs  infiltration.rs  mod.rs  overland.rs  runner.rs
tests/: domain_tests.rs  integration_test.rs  plot_tests.rs  test_python.py
